--- a/gb/20/2/20/n11883638.md
+++ b/gb/20/2/20/n11883638.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jpwvgr227/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/jpwvgr227/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jpwvgr227/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>“天然补充品”真的天然吗？营养学家解谜</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>“天然补充品”真的天然？营养家揭补充品迷思</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/vitamin-supplement_593643251-copy-600x400.jpg" />
 <h6>从食物中提取的营养补充品如维生素E、保健食品等，真的天然、对健康有益吗？(Shutterstock)
 </h6>
 <hr>
-<p><span style="color: #188638;"><strong>【编者按】</strong></span>如今，很多人把健康寄托在营养<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E8%A1%A5%E5%85%85%E5%93%81.md">补充品</a>上，不仅服用特定<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E7%BB%B4%E7%94%9F%E7%B4%A0.md">维生素</a>与矿物质，还有其它“天然补充品”，例如<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E4%BF%9D%E5%81%A5%E9%A3%9F%E5%93%81.md">保健食品</a>、益生菌、omega-3脂肪酸??但这些补充品真的天然、对健康有益吗？被称为“营养学界爱因斯坦”的康乃尔大学营养生化学系名誉教授T·柯林·坎贝尔及卫生研究博士霍华·贾可布森给出解答。</p>
-<p>过去三十年来，<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E8%A1%A5%E5%85%85%E5%93%81.md">补充品</a>产业大幅成长，截至2008年，全球膳食补充品的销售金额预估为1870亿美元。美国成年人服用膳食补充品的比例达68％，有52％的美国人表示自己定期服用。如今若有人问起“最美国”的东西是什么？把苹果派抛到一边吧！现在已经是综合<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E7%BB%B4%E7%94%9F%E7%B4%A0.md">维生素</a>的天下了。</p>
+<p><span style="color: #188638;"><strong>【编者按】</strong></span>如今，很多人把健康寄托在营养<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%A1%A5%E5%85%85%E5%93%81.md#1">补充品</a>上，不仅服用特定<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%BB%B4%E7%94%9F%E7%B4%A0.md#1">维生素</a>与矿物质，还有其它“天然补充品”，例如<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%BF%9D%E5%81%A5%E9%A3%9F%E5%93%81.md#1">保健食品</a>、益生菌、omega-3脂肪酸??但这些补充品真的天然、对健康有益吗？被称为“营养学界爱因斯坦”的康乃尔大学营养生化学系名誉教授T·柯林·坎贝尔及卫生研究博士霍华·贾可布森给出解答。</p>
+<p>过去三十年来，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%A1%A5%E5%85%85%E5%93%81.md#1">补充品</a>产业大幅成长，截至2008年，全球膳食补充品的销售金额预估为1870亿美元。美国成年人服用膳食补充品的比例达68％，有52％的美国人表示自己定期服用。如今若有人问起“最美国”的东西是什么？把苹果派抛到一边吧！现在已经是综合<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%BB%B4%E7%94%9F%E7%B4%A0.md#1">维生素</a>的天下了。</p>
 <h2><span style="color: #188638;">当代医学存在的问题：认为从食物中独立出来的成分更好</span></h2>
 <p>当代医学最大的问题在于：将“把成分独立出来”的不自然化学药物，当成对抗疾病的主要武器。</p>
 <p>很多人误以为将化学物质从自然食物中离析出来后，仍具有良好功效，甚至优于完整食物。他们的思路是：</p>
@@ -21,7 +21,7 @@
 <p>换言之，我们称为维生素C的这种化学物质，效用竟然不到苹果中类维生素C抗氧化性的百分之一！苹果中剩下99％以上的抗氧化性，得归功于其它和维生素C类似的化学物质，因此整颗苹果中的维生素C能发挥的潜力，比单独服用维生素C或同时服用其它类似化学物质要有效得多。</p>
 <p>这研究成果说明，营养的过程相当深奥且讲究完整性，而身体运用特定营养素的方式，和其它一起摄取进来的营养素息息相关。如果只单单服用维生素C片，就忽视了其它能让维生素C发挥功效的“配角”。即使在药丸中纳入许多配角，就像有些厂商会在维生素C片中加入生物类黄酮，仍是假定苹果拥有、药丸没有的东西不重要。</p>
 <p>刘教授将研究成果发表在知名学刊《自然》（Nature），提出结论：“新鲜水果的天然抗氧化物，可能比膳食补充品（维生素C）有用得多。”</p>
-<figure id="attachment_11106734" style="width: 600px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2019/03/pingguo11.jpg"><img class="size-large wp-image-11106734" src="https://i.epochtimes.com/assets/uploads/2019/03/pingguo11-600x400.jpg" alt="苹果皮中的营养比果肉更丰富，含有大量的苹果多酚和膳食纤维。(Shutterstock)" width="600" b="400" /></a><figcaption class="wp-caption-text">苹果中的类维生素C抗氧化性，比维生素C补充剂强得多。(Shutterstock)</figcaption></figure>
+<figure id="attachment_11106734" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/03/pingguo11.jpg"><img class="size-large wp-image-11106734" src="https://i.epochtimes.com/assets/uploads/2019/03/pingguo11-600x400.jpg" alt="苹果皮中的营养比果肉更丰富，含有大量的苹果多酚和膳食纤维。(Shutterstock)" width="600" b="400" /></a><figcaption class="wp-caption-text">苹果中的类维生素C抗氧化性，比维生素C补充剂强得多。(Shutterstock)</figcaption></figure>
 <p>刘教授总结多项研究后更发现，苹果简直是个宝藏，里头有许多类似维生素C的化合物，诸如只存在于植物中的抗氧化物槲皮素、儿茶素、根皮苷、绿原酸等，且以许多形式存在于苹果里。我们可以继续列出一长串苹果与其它水果中的化学物质，但都可能只是冰山一角——苹果里的世界之大，是从外观看不出来的！</p>
 <p>而且营养素结合后的效果，不等于各个营养素的总和。除此之外，我们所吃的食物中有多少营养素会被摄取与实际利用，也很难说。</p>
 <p>真正的问题在于，我们问错问题。“我们摄取到多少维生素C？”这个问题并不正确，而是该问：“该吃什么样的食物，才能常保健康？”</p>
@@ -33,7 +33,7 @@
 <p>这种观念就是补充品产业的基础。业者幻想，我们的营养需求可以靠粉末、药丸或方糖似的东西来满足，业者不断分析据称有益健康的食物，以萃取并合成出其活性成分。</p>
 <p>医药界用来治疗疾病的药物，是将化学物质分离出来或加以合成，完全不考虑这些化学物质的天然来源。补充品和那些经过正式测试的医药一样可能有副作用。</p>
 <p>个别营养素补充品无法发挥预期功效的例子很多，有时还会造成反效果。或许有些个别研究显示，维生素补充品在短期内带来的健康效益具统计显着性（想必长期也有好处），但如果将大量的研究集结来看，则几乎没有证据显示定期服用维生素补充品能促进健康。</p>
-<p>学者经过长期努力，想证明<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E8%90%A5%E5%85%BB%E8%A1%A5%E5%85%85%E5%93%81.md">营养补充品</a>能够降低心血管疾病、癌症与总死亡率，最后往往徒劳无功，又耗费巨资。反倒有些证据充分的研究显示，补充品不仅没有好处，甚至还有害。</p>
+<p>学者经过长期努力，想证明<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%90%A5%E5%85%BB%E8%A1%A5%E5%85%85%E5%93%81.md#1">营养补充品</a>能够降低心血管疾病、癌症与总死亡率，最后往往徒劳无功，又耗费巨资。反倒有些证据充分的研究显示，补充品不仅没有好处，甚至还有害。</p>
 <h2><span style="color: #188638;">研究证实两大补充品的风险</span></h2>
 <p>以下以维生素E、β-胡萝卜素这两种常研究的补充品来说明。</p>
 <h3>1. 维生素E</h3>
@@ -45,10 +45,9 @@
 <p>许多实验显示，维生素E补充品无法降低心血管疾病、癌症、糖尿病、白内障或慢性阻塞性肺病的风险。对于某些族群的人来说，维生素E补充品可能有效果，但对大多数的人来说，却没有益处。</p>
 <p>近期有一项研究结果更令人震惊，该研究回顾72次随机试验与近30万名受试者，发现服用维生素E补充品（还有维生素A及下文要讨论的β-胡萝卜素），和整体死亡率偏高有关。</p>
 <p>有些维生素E补充品的倡导者表示，应找出使用此补充品后效益大于风险的族群。但这种策略依然忽视全食物蔬食可能有相同的效果，且成本较低，也没有心脏病与死亡等副作用。</p>
-<h3></h3>
 <h3>2. β-胡萝卜素</h3>
 <p>根据短期效果促下判断的经典例子，还有维生素A的前驱物“β-胡萝卜素”。β-胡萝卜素存在于植物中，人体摄取之后可将其转变为“真正的”维生素A，它自然存在于绿叶蔬菜，以及红色、橘色与黄色的鲜艳蔬菜中，例如彩椒、胡萝卜与南瓜。1970年代，科学家发现β-胡萝卜素是很强的抗氧化物，可阻挡会导致癌细胞增加的自由基活动。此外，富含β-胡萝卜素的蔬果和降低肺癌风险有关。整体来说，这些观察正好证实β-胡萝卜素可能可以预防肺癌，或许还能预防其它癌症。</p>
-<figure id="attachment_11883922" style="width: 600px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2020/02/shutterstock_1360011053.jpg"><img class="size-large wp-image-11883922" src="https://i.epochtimes.com/assets/uploads/2020/02/shutterstock_1360011053-600x400.jpg" alt="研究发现，β-胡萝卜素补充品无法减少癌症或心血管疾病的罹患率。(Shutterstock)" width="600" b="400" /></a><figcaption class="wp-caption-text">研究发现，β-胡萝卜素补充品无法减少癌症或心血管疾病的罹患率。(Shutterstock)</figcaption></figure>
+<figure id="attachment_11883922" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/02/shutterstock_1360011053.jpg"><img class="size-large wp-image-11883922" src="https://i.epochtimes.com/assets/uploads/2020/02/shutterstock_1360011053-600x400.jpg" alt="研究发现，β-胡萝卜素补充品无法减少癌症或心血管疾病的罹患率。(Shutterstock)" width="600" b="400" /></a><figcaption class="wp-caption-text">研究发现，β-胡萝卜素补充品无法减少癌症或心血管疾病的罹患率。(Shutterstock)</figcaption></figure>
 <p>然而十年之后，芬兰一项以吸烟者为对象的研究显示，服用β-胡萝卜素补充品六年半，肺癌死亡率会提高46％，这是重大且具有统计显着性的影响。此外，服用此补充品者心血管疾病的死亡率增加26％。由于这项研究的副作用实在太大，不得不提早中断。没错，β-胡萝卜素补充品会大幅提高死亡率，致使测试提前结束，以免更多人死亡。</p>
 <p>值得注意的是，在同一项研究之中，假使从食物中摄取同样基准的β-胡萝卜素，则和降低肺癌风险有关。</p>
 <p>这个差异非常明显，食物之中的β-胡萝卜素和降低肺癌风险有关，补充品中的β-胡萝卜素却和提高肺癌风险有关，其它大型研究也确认了这项发现。</p>
@@ -56,49 +55,65 @@
 <h2><span style="color: #188638;">执迷不悟的补充品推手</span></h2>
 <p>大量的研究显示，β-胡萝卜素、维生素E与其它抗氧化维生素的各种机制，“应该”能预防心脏病与癌症，但检测药丸中的个别营养素时却找不到这些效益。</p>
 <p>虽然学者开始接受这些研究发现，也不再推荐服用β-胡萝卜素、维生素E等补充品，然而他们还是固执地秉持旧有信念，主张我们仍应该保持信心，透过个别的化学物质来预防疾病。</p>
-<p>愈来愈多严谨的研究一致显示，个别的<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E8%90%A5%E5%85%BB%E8%A1%A5%E5%85%85%E5%93%81.md">营养补充品</a>根本没有好处，然而营养补充品产业及他们所雇用的学者，却只顾着把简化式的洞愈掘愈深。</p>
+<p>愈来愈多严谨的研究一致显示，个别的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%90%A5%E5%85%BB%E8%A1%A5%E5%85%85%E5%93%81.md#1">营养补充品</a>根本没有好处，然而营养补充品产业及他们所雇用的学者，却只顾着把简化式的洞愈掘愈深。</p>
 <p>需要注意的是，我并非表示对部分服用补充品的人来说，营养补充品完全没有功效，尤其是补充品的化学成分与整颗植物差不多的补充品，例如干燥药草复合物。这些产品在某些情况下，可能对某些人有用，但我认为，“举证责任”是那些提出健康主张的人该负的。此外，如果主张甚至推论这些“天然补充品”是最佳的健康选择，却未能说明经常摄取完整的全食物蔬食（亦即这些产品的来源）效果更好、价格更便宜，也是不妥当的。</p>
 <p>摄取愈来愈多补充品的危机，不仅是明文记载的健康反效果。更重大的危机在于，热爱补充品这种灵丹，会让人以为不必采取正确的饮食方式——要是能大啖热狗和冰淇淋，出问题时又能靠药丸挽救，何必吃蔬菜呢？</p>
 <p>编辑整理自《<span style="text-decoration: underline;"><span style="color: #188638;"><a style="color: #188638; text-decoration: underline;" href="https://www.books.com.tw/products/0010639446" target="_blank" rel="noopener noreferrer">救命饮食2．不生病的秘密</a></span></span>》 柿子文化出版</p>
-<p>浏览<span style="text-decoration: underline;"><span style="color: #188638; text-decoration: underline;"><a style="color: #188638; text-decoration: underline;" href="https://github.com/jpwvgr227/djy/blob/master/gb/nsc1002.md" target="_blank" rel="noopener noreferrer">大纪元健康1+1频道</a></span></span>，了解更多健康知识！</p>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/jpwvgr227/djy/blob/master/gb/18/6/29/n10524936.md" target="_blank" rel="noopener noreferrer">维他命D光环变暗？教授：为何我改变了对它的看法</a></span></h3>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/jpwvgr227/djy/blob/master/gb/19/5/19/n11267374.md" target="_blank" rel="noopener noreferrer">还在吃维生素补充剂？研究：这样补维生素最好</a></span></h3>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/jpwvgr227/djy/blob/master/gb/19/3/27/n11142251.md" target="_blank" rel="noopener noreferrer">缺乏维生素D会变胖？天然又有效的补法</a></span></h3>
-<p>责任编辑：李清风</p>
+<p>浏览<span style="text-decoration: underline;"><span style="color: #188638; text-decoration: underline;"><a style="color: #188638; text-decoration: underline;" href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1" target="_blank" rel="noopener noreferrer">大纪元健康1+1频道</a></span></span>，了解更多健康知识！</p>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/29/n10524936.md#1" target="_blank" rel="noopener noreferrer">维他命D光环变暗？教授：为何我改变了对它的看法</a></span></h3>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/tjvrql262/djy/blob/master/gb/19/5/19/n11267374.md#1" target="_blank" rel="noopener noreferrer">还在吃维生素补充剂？研究：这样补维生素最好</a></span></h3>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/tjvrql262/djy/blob/master/gb/19/3/27/n11142251.md#1" target="_blank" rel="noopener noreferrer">缺乏维生素D会变胖？天然又有效的补法</a></span></h3>
+<p>责任编辑：李清风◇</p>
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/20/n11883638.htm">“天然补充品”真的天然吗？营养学家解谜</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798917.htm">武汉肺炎无法排除人传人 美国务院警告防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798666.htm">武汉新冠状病毒再增死亡病例 网民冒险爆料</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798091.htm">日本现首例武汉肺炎 机场加强防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11796789.htm">港卫生防护中心：武汉肺炎一患者 未涉足街市 疑人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11795520.htm">新型冠状病毒 近距离接触恐人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11793955.htm">武汉肺炎疑现人传人 夫妻先后发病</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎扩散30国和地区 武汉死亡率高</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879658.htm">【独家】外逃求生？武汉一天出走2.8万人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881404.htm">北京西城成疫情重灾区 财政部员工住宅楼染疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882402.htm">爆聚集性感染 重庆钛业全面停产 逾百人隔离</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11861529.htm">瘟疫来势汹汹 却绕开了这些人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864598.htm">胎记是契约？再续前世缘</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/17/n11875760.htm">【四维健康】武汉肺炎病人突然倒地死亡 原因为何？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11876712.htm">【翻墙必看】分析：中南海内斗正全面失控</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11878995.htm">【拍案惊奇】红会囤口罩 疫区粮食供应亮黄灯</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11876403.htm">【拍案惊奇】瘟疫衍生悲剧 千亿蝗虫会进中国？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878418.htm">【热点互动】各地封城还要封多久？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/16/n11873581.htm">疫情下横店片场复工 赵丽颖杨幂的粉丝齐抗议</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/5/n11846781.md#1">17年坚持 科隆教堂前迎接中国人的德国女士</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/18/n11662403.md#1">肾结石痛到一辈子忘不了 2招预防 不让结石上身</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/6/n11638223.md#1">肺癌高居癌症榜首 常吃胡萝卜可降42％风险</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/10/22/n11605055.md#1">叶黄素能防眼睛老化 “这些食物”帮你补</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/5/11/n11249217.md#1">多位名人放弃素食 长期素食者须留意2个风险</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/jpwvgr227/djy/blob/master/gb/20/2/20/n11883638.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jpwvgr227/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jpwvgr227/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jpwvgr227/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/10/16/n11592956.md#1">小便颜色的秘密</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/26/n10248973.md#1" target="_blank">还原真实的中共：年轻人乌托邦梦碎</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/30/n10441048.md#1" target="_blank">西人学炼法轮功 生活发生深刻变化</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943372.md#1">“回国避疫”和“中国式撤侨”的真相</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942860.md#1">【最新疫情3.16】旧金山地区700万人居家防疫</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943647.md#1">10种咖啡新伴侣 咖啡美味升级又健康</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943886.md#1">苹果经济适用房资金启动 谷歌为新园区再下一城</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940091.md#1">乌克兰猫咪计程车 猫咪陪坐让乘客不想下车</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940160.md#1">狗狗思念过世主人暴瘦 破例让它见最后一面</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940204.md#1">6个月大宝宝开二次心臓手术 第一次展开灿烂微笑</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945531.md#1">武汉人斥官员：给你改正机会 谁给我活命机会</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11944883.md#1">【胡乃文开讲】白粥治咳抗感冒！5种神奇食疗方 止咳很实用</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">【新闻看点】病毒来自哪里？川普：中美都知道</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">【现场视频】东莞虎门镇现大量防暴警察</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943213.md#1">又一好莱坞明星确诊 007邦女郎隔离在家</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/20/n11883638.htm">“天然补充品”真的天然？营养家揭补充品迷思</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/2/20/n11883638.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
